ensar: Kommentare ersetzen